# mini-servant

./: CHANGELOG.md  README.md  mini-servant.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: MiniServant.hs  Servant.hs
src/Servant/: API.hs  Server.hs
src/Servant/API/: Alternative.hs  Capture.hs  Sub.hs  Verbs.hs
src/Servant/Server/: Internal.hs
src/Servant/Server/Internal/: Delayed.hs  DelayedIO.hs  Handler.hs  RouteResult.hs  Router.hs  RoutingApplication.hs  ServerError.hs
